force-app/main/default/objects/KimbleOne__DeliveryProgram__c/KimbleOne__DeliveryProgram__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Program</label>
    <nameField>
        <label>Delivery Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>