force-app/main/default/objects/KimbleOne__DeliveryProgram__c/fields/KimbleOne__Account__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Programs</relationshipLabel>
    <relationshipName>DeliveryPrograms</relationshipName>
    <type>Lookup</type>
</CustomField>