force-app/main/default/objects/KimbleOne__DeliveryProgram__c/fields/KimbleOne__DeliveryProgram__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.KimbleOne__Account__c</field>
            <operation>equals</operation>
            <valueField>KimbleOne__DeliveryProgram__c.KimbleOne__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__DeliveryProgram__c</referenceTo>
    <relationshipLabel>Delivery Programs</relationshipLabel>
    <relationshipName>DeliveryPrograms</relationshipName>
    <type>Lookup</type>
</CustomField>