force-app/main/default/objects/KimbleOne__DeliveryProgram__c/fields/KimbleOne__StatusSummaryTemplateInternal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StatusSummaryTemplateInternal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status Summary Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__StatusSummaryTemplate__c.KimbleOne__SharedWithCustomer__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>KimbleOne__StatusSummaryTemplate__c.KimbleOne__ContextType__r.KimbleOne__Enum__c</field>
            <operation>equals</operation>
            <value>DeliveryProgram</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__StatusSummaryTemplate__c</referenceTo>
    <relationshipLabel>Delivery Programs (Internal Status Summary Template)</relationshipLabel>
    <relationshipName>DeliveryProgramsStatusSummaryInt</relationshipName>
    <type>Lookup</type>
</CustomField>